# mnemnk-screen

./: Cargo.toml  README.md  mnemnk.json
.github/workflows/: publish.yml
src/: main.rs
