[package]
name = "mnemnk-screen"
version = "0.3.0"
description = "Mnemnk agent for capturing screen"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/mnemnk/mnemnk-screen"
license = "MIT"

[[bin]]
name = "mnemnk-screen"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
xcap = "0.3.1"
